--- a/maply-frontend/src/app/component/user-details/user-details.component.html
+++ b/maply-frontend/src/app/component/user-details/user-details.component.html
@@ -7,27 +7,16 @@
             </a>
         </div>
     </div>
-
     <div class="row">
         <div class="col">
             <div class="border-bottom border-gray py-3">
-                <h6>
-                    Details @{{userData?.username}}
-                </h6>
+                <h6>Details @{{userData?.username}}</h6>
             </div>
             <div>
-                <p>
-                    Name: {{userData?.firstName}}
-                </p>
-                <p>
-                    Last name: {{userData?.lastName}}
-                </p>
-                <p>
-                    Username: {{userData?.username}}
-                </p>
-                <p>
-                    e-mail: {{userData?.email}}
-                </p>
+                <p>Name: {{userData?.firstName}}</p>
+                <p>Last name: {{userData?.lastName}}</p>
+                <p>Username: {{userData?.username}}</p>
+                <p>e-mail: {{userData?.email}}</p>
             </div>
         </div>
     </div>
@@ -35,9 +24,7 @@
     <div class="row">
         <div class="col">
             <div class="border-bottom border-gray py-3">
-                <h6>
-                    Position history
-                </h6>
+                <h6>Position history</h6>
             </div>
             <table class="table table-striped table-sm">
                 <thead>
@@ -61,4 +48,5 @@
             </table>
         </div>
     </div>
+    
 </div>
